--- a/FTTBlazor/Pages/Index.razor
+++ b/FTTBlazor/Pages/Index.razor
@@ -1,13 +1,8 @@
 ﻿@page "/"
 
 @code{
-  
-}
 
-<div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="margin-top: -8px;">
-    <img style="width: 30%;" src="../img/logoMicrosoft.png" />
-    <h1 style="text-align: right;">FTT Blazor</h1>
-</div>
+}
 
 <div class="mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid">
     <p>Nosso projeto tem o intuito apresentar a solução da Microsoft para o WebAssembly chamada Blazor!</p>
@@ -22,21 +17,20 @@
         <h2>Membros</h2>
     </div>
 
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
+    <div class="mdl-cell--6-col">
         <img src="../img/jho.png" class="img-center" />
         <p class="text-center">Responsável pelo Angular, 082170016</p>
     </div>
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
+    <div class="mdl-cell--6-col">
         <img src="../img/paulo.png" class="img-center" />
         <p class="text-center">Responsável pelo teórica, 082170024</p>
     </div>
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
+    <div class="mdl-cell--6-col">
         <img src="../img/thiago.png" class="img-center" />
         <p class="text-center">Responsável pela gerencia, 082170029</p>
     </div>
-    <div class="mdl-cell mdl-cell--6-col mdl-grid align-center">
+    <div class="mdl-cell--6-col">
         <img src="../img/luiz.png" class="img-center" />
         <p class="text-center">Responsável pelo Blazor, 082170039</p>
     </div>
 </div>
-
