--- a/FTTBlazor/Shared/NavMenu.razor
+++ b/FTTBlazor/Shared/NavMenu.razor
@@ -9,7 +9,7 @@
     }
 }
 
-<NavLink class="navigation mdl-navigation mdl-color--blue-grey-800" href="" Match="NavLinkMatch.All">
+<NavLink class="navigation mdl-navigation mdl-color--blue-grey-800" Match="NavLinkMatch.All">
     <a class="mdl-navigation__link" href="">
         <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
             home
@@ -28,4 +28,13 @@
         </i>
         Toaster
     </a>
+
+    <div style=" bottom: 0px; position: fixed;">
+        <a class="mdl-navigation__link" style="width: 88%;" href="https://github.com/luizgustavo77/FTTBlazor">
+            <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+                code
+            </i>
+            GitHub
+        </a>
+    </div>
 </NavLink>
