--- a/FTTBlazor/Pages/About/Dialog.razor
+++ b/FTTBlazor/Pages/About/Dialog.razor
@@ -36,16 +36,16 @@
 </div>
 
 
-<FTTBlazor.Dialog @bind-IsOpen="@dialogIsOpen">
-    <FTTBlazor.DialogTitle>
+<FTTDialog @bind-IsOpen="@dialogIsOpen">
+    <FTTDialogTitle>
         Região do DialogTitle
-    </FTTBlazor.DialogTitle>
-    <FTTBlazor.DialogContent>
+    </FTTDialogTitle>
+    <FTTDialogContent>
         <hr />
         Região do DialogContent
         <hr />
-    </FTTBlazor.DialogContent>
-    <FTTBlazor.DialogActions>
+    </FTTDialogContent>
+    <FTTDialogActions>
         Região do DialogActions
-    </FTTBlazor.DialogActions>
-</FTTBlazor.Dialog>
+    </FTTDialogActions>
+</FTTDialog>
