--- a/FTTBlazor/Components/Dialog/FTTDialog.razor
+++ b/FTTBlazor/Components/Dialog/FTTDialog.razor
@@ -1,5 +1,5 @@
 ﻿@namespace FTTBlazor
-@inherits BaseDialog
+@inherits FTTBaseDialog
 
 <div class="@ClassMapper.AsString()"
      style="@StyleMapper.AsString()"
