FTT Toaster Base

--- a/FTTBlazor/Components/Toast/Toast.razor
+++ b/FTTBlazor/Components/Toast/Toast.razor
@@ -1,4 +1,4 @@
-﻿@inherits ToastBase
+﻿@inherits FTTToastBase
 
 <div class="toast @(IsVisible ? "toast-visible" : null) @BackgroundCssClass">
     <div class="toast-icon">
