--- a/FTTBlazor/_Imports.razor
+++ b/FTTBlazor/_Imports.razor
@@ -1,11 +1,9 @@
 ﻿@using System.Net.Http
 @using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using FTTBlazor.Shared
 @using FTTBlazor
-@using FTTBlazor.Client
-@using FTTBlazor.Client.Shared
