--- a/FTTBlazor/Components/Dialog/FTTDialogTitle.razor
+++ b/FTTBlazor/Components/Dialog/FTTDialogTitle.razor
@@ -1,5 +1,5 @@
 ﻿@namespace FTTBlazor
-@inherits FTTBaseDomComponent
+@inherits FTTBaseComponent
 @using Microsoft.AspNetCore.Components
 
 <h2 class="@ClassMapper.AsString()" style="@StyleMapper.AsString()" @ref="Ref" @attributes="Attributes" Id="@Id">
