--- a/FTTBlazor/Components/Dialog/FTTDialogActions.razor
+++ b/FTTBlazor/Components/Dialog/FTTDialogActions.razor
@@ -1,6 +1,6 @@
 ﻿@namespace FTTBlazor
 @using Microsoft.AspNetCore.Components
-@inherits FTTBaseComponent
+@inherits FTTBaseDialog
 
 <footer class="@ClassMapper.AsString()" style="@StyleMapper.AsString()" @ref="Ref"  @attributes="Attributes" Id="@Id">
     @ChildContent
