--- a/FTTBlazor/Components/Dialog/FTTDialogContent.razor
+++ b/FTTBlazor/Components/Dialog/FTTDialogContent.razor
@@ -1,5 +1,5 @@
 ﻿@namespace FTTBlazor
-@inherits FTTBaseComponent
+@inherits FTTBaseDialog
 @using Microsoft.AspNetCore.Components
 
 <div class="@ClassMapper.AsString()" style="@StyleMapper.AsString()" @ref="Ref" @attributes="Attributes" Id="@Id">
