--- a/FTTBlazor/Shared/NavMenu.razor
+++ b/FTTBlazor/Shared/NavMenu.razor
@@ -28,6 +28,12 @@
         </i>
         Toaster
     </a>
+    <a class="mdl-navigation__link" href="select">
+        <i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">
+            list
+        </i>
+        Select
+    </a>
 
     <div style=" bottom: 0px; position: fixed;">
         <a class="mdl-navigation__link" style="width: 88%;" href="https://github.com/luizgustavo77/FTTBlazor">
