--- a/FTTBlazor/wwwroot/css/fttBlazor.css
+++ b/FTTBlazor/wwwroot/css/fttBlazor.css
@@ -411,3 +411,367 @@
 .pull-left {
     float: left
 }
+
+.has-float-label {
+    display: block;
+    position: relative;
+}
+
+    .has-float-label label, .has-float-label > span {
+        position: absolute;
+        left: 0;
+        top: 6px;
+        cursor: text;
+        opacity: 1;
+        -webkit-transition: all .2s;
+        transition: all .2s;
+    }
+
+    .has-float-label select {
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+    }
+
+    .has-float-label input, .has-float-label select, .has-float-label a {
+        font-size: inherit;
+        padding-top: 1em;
+        border: 0;
+        border-radius: 0;
+    }
+
+        .has-float-label input::-webkit-input-placeholder, .has-float-label select::-webkit-input-placeholder {
+            opacity: 1;
+            -webkit-transition: all .2s;
+            transition: all .2s;
+        }
+
+        .has-float-label input::-moz-placeholder, .has-float-label select::-moz-placeholder, .has-float-label a::-moz-placeholder {
+            opacity: 1;
+            -moz-transition: all .2s;
+            transition: all .2s;
+        }
+
+        .has-float-label input:-ms-input-placeholder, .has-float-label select:-ms-input-placeholder {
+            opacity: 1;
+            -ms-transition: all .2s;
+            transition: all .2s;
+        }
+
+        .has-float-label input::-ms-input-placeholder, .has-float-label select::-ms-input-placeholder {
+            opacity: 1;
+            -ms-transition: all .2s;
+            transition: all .2s;
+        }
+
+        .has-float-label input::placeholder, .has-float-label select::placeholder {
+            opacity: 1;
+            -webkit-transition: all .2s;
+            transition: all .2s;
+        }
+
+        .has-float-label input:placeholder-shown:not(:focus)::-webkit-input-placeholder, .has-float-label a:placeholder-shown:not(:focus)::-webkit-a-placeholder, .has-float-label select:placeholder-shown:not(:focus)::-webkit-input-placeholder {
+            opacity: 0;
+        }
+
+        .has-float-label input:placeholder-shown:not(:focus)::-moz-placeholder, .has-float-label select:placeholder-shown:not(:focus)::-moz-placeholder {
+            opacity: 0;
+        }
+
+        .has-float-label input:placeholder-shown:not(:focus):-ms-input-placeholder, .has-float-label select:placeholder-shown:not(:focus):-ms-input-placeholder {
+            opacity: 0;
+        }
+
+        .has-float-label input:placeholder-shown:not(:focus)::-ms-input-placeholder, .has-float-label select:placeholder-shown:not(:focus)::-ms-input-placeholder {
+            opacity: 0;
+        }
+
+        .has-float-label input:placeholder-shown:not(:focus)::placeholder, .has-float-label select:placeholder-shown:not(:focus)::placeholder {
+            opacity: 0;
+        }
+
+        .has-float-label input:placeholder-shown:not(:focus) + *, .has-float-label select:invalid:not(:focus) + *, .has-float-label select[data-id="00000000-0000-0000-0000-000000000000"]:not(:focus) + * {
+            font-size: 1rem;
+            top: 30%;
+        }
+
+        .has-float-label input:focus, .has-float-label select:focus, .has-float-label a:focus {
+            outline: none;
+            border-color: var(--brandline);
+        }
+
+    .has-float-label input, .has-float-label textarea {
+        padding-left: 16px;
+        min-height: 56px;
+        color: var(--brandtext);
+        border-bottom: 1px solid var(--brandline);
+        width: 100%;
+    }
+
+    .has-float-label > label {
+        padding-left: 16px;
+        font-size: 12px;
+    }
+
+.has-float-link {
+    padding-top: 1.5em !important;
+    padding-left: 16px;
+    min-height: 56px;
+    color: var(--brandtext);
+    border-bottom: 1px solid var(--brandline);
+    width: 100%;
+}
+
+.ftt-blazor-border-right {
+    border-right: 1px solid var(--brandline) !important;
+}
+
+.ftt-blazor-radio-center {
+    text-align: center;
+}
+
+.ftt-blazor-components input, .ftt-blazor-components textarea {
+    background-color: transparent !important;
+}
+
+.ftt-blazor-components a {
+    background-color: transparent !important;
+}
+
+.ftt-blazor-components textarea {
+    border-top: none;
+    margin-top: 30px;
+    padding-left: 15px;
+    border-right: none !important;
+    border-left: none;
+}
+
+.ftt-blazor-text-field {
+    background-color: var(--brandfield) !important;
+    color: var(--brandtext) !important;
+}
+
+.ftt-blazor-components .ftt-blazor-text-field {
+    background-color: transparent !important;
+}
+
+.ftt-blazor-button {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    font-family: Roboto, sans-serif;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    font-size: .875rem;
+    line-height: 2.25rem;
+    font-weight: 500;
+    letter-spacing: .08929em;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0 8px 0 8px;
+    display: inline-flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    min-width: 64px;
+    border: none;
+    outline: none;
+    line-height: inherit;
+    user-select: none;
+    -webkit-appearance: none;
+    overflow: visible;
+    vertical-align: middle;
+    border-radius: 4px;
+    height: 36px;
+}
+
+    .ftt-blazor-button:hover {
+        cursor: pointer;
+        background-color: var(--brandline);
+    }
+
+.ftt-blazor-checkbox {
+    background-color: transparent;
+    display: block;
+    position: relative;
+    height: 56px;
+    width: 100%;
+    border-bottom: 1px solid var(--brandline);
+}
+
+    .ftt-blazor-checkbox label {
+        width: 100%;
+        display: block;
+        text-align: left;
+        color: #3C454C;
+        cursor: pointer;
+        position: relative;
+        z-index: 1;
+        -webkit-transition: color 200ms ease-in;
+        transition: color 200ms ease-in;
+        overflow: hidden;
+        padding-left: 56px;
+        padding-top: 18px;
+        height: 100%;
+    }
+
+        .ftt-blazor-checkbox label:before {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            content: '';
+            background-color: transparent;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            -webkit-transform: translate(-50%, -50%) scale3d(1, 1, 1);
+            transform: translate(-50%, -50%) scale3d(1, 1, 1);
+            -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+            transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+            opacity: 0;
+            z-index: -1;
+        }
+
+        .ftt-blazor-checkbox label:after {
+            width: 24px;
+            height: 24px;
+            content: '';
+            border: 2px solid #D1D7DC;
+            background-color: #fff;
+            background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+            background-repeat: no-repeat;
+            background-position: 2px 3px;
+            border-radius: 50%;
+            z-index: 2;
+            position: absolute;
+            left: 16px;
+            top: 50%;
+            -webkit-transform: translateY(-50%);
+            transform: translateY(-50%);
+            cursor: pointer;
+            -webkit-transition: all 200ms ease-in;
+            transition: all 200ms ease-in;
+        }
+
+    .ftt-blazor-checkbox input:checked ~ label {
+    }
+
+        .ftt-blazor-checkbox input:checked ~ label:before {
+            -webkit-transform: translate(-50%, -50%) scale3d(56, 56, 1);
+            transform: translate(-50%, -50%) scale3d(56, 56, 1);
+            opacity: 1;
+        }
+
+        .ftt-blazor-checkbox input:checked ~ label:after {
+            background-color: var(--brandtwo);
+            border-color: var(--brandtwo);
+        }
+
+    .ftt-blazor-checkbox input {
+        width: 32px;
+        height: 32px;
+        -webkit-box-ordinal-group: 2;
+        order: 1;
+        z-index: 1;
+        position: absolute;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+        transform: translateY(-50%);
+        cursor: pointer;
+        visibility: hidden;
+    }
+
+.ftt-blazor-input {
+}
+
+    .ftt-blazor-input input:invalid + label:after {
+        content: '*';
+        margin-left: 1px;
+    }
+
+    .ftt-blazor-input a:invalid + label:after {
+        content: '*';
+        margin-left: 1px;
+    }
+
+.ftt-blazor-text-field__input {
+    border-bottom: none !important;
+}
+
+.ftt-blazor-floating-label {
+    color: var(--brandtext) !important;
+}
+
+.ftt-blazor-text-field__input {
+    border-bottom: none !important;
+}
+
+.ftt-blazor-text-field__input:required ~ .ftt-blazor-floating-label::after, .ftt-blazor-text-field__input:required ~ .ftt-blazor-notched-outline .ftt-blazor-floating-label::after {
+    margin-left: unset;
+    content: unset;
+}
+
+.ftt-blazor-calendar input:invalid + label:after {
+    content: '*' !important;
+    margin-left: 1px !important;
+}
+
+.ftt-blazor-calendar, .ftt-blazor-select {
+    width: 100%;
+    height: 100%;
+}
+
+    .ftt-blazor-select select {
+        border: 0;
+        border-radius: 0;
+        appearance: none;
+        font-size: inherit;
+        color: var(--brandtext);
+        padding-left: 16px;
+        width: 100%;
+        height: 55px;
+        background-color: transparent !important;
+        cursor: pointer;
+    }
+
+        .ftt-blazor-select select option {
+            background-color: var(--brandbackground);
+            color: var(--brandtext);
+        }
+
+.ftt-blazor-select {
+    border-bottom: 1px solid var(--brandline);
+}
+
+.sidebar .sidebar-wrapper {
+    overflow: unset !important
+}
+
+.sidebar {
+    z-index: 2;
+    box-shadow: none !important;
+}
+
+.modal-close-float {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background: var(--brandmenu);
+    z-index: 9;
+    color: var(--brandmenutext) !important;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    font-weight: 600;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.ftt-blazor-select {
+    height: 56px;
+}
+
+.align-left {
+    margin-left: 0px;
+}
