--- a/src/FTTBlazor/Pages/About/Select.razor
+++ b/src/FTTBlazor/Pages/About/Select.razor
@@ -1,7 +1,7 @@
 ﻿@page "/select"
 
 @using FTTBlazor.Components.Forms.Select;
-@using FTTBlazor.Common;
+@using FTTBlazor.Models;
 
 @code{
     enum EnumPokemons
