Ajustando descricao de parametro

--- a/src/FTTBlazor/Pages/About/Select.razor
+++ b/src/FTTBlazor/Pages/About/Select.razor
@@ -160,7 +160,7 @@
         <h6><span style="font-weight:bold;">Size:</span> Tamanho do componente na tela</h6>
         <h6><span style="font-weight:bold;">DataSourceEndpoint:</span> Endpoint para fazer a requisição do tipo GET</h6>
         <h6><span style="font-weight:bold;">Required:</span> Se é obrigatorio preencher o componente ao dar um submit</h6>
-        <h6><span style="font-weight:bold;">DataSourceDescField:</span> Define o nome da variavel que vai mostrar no modal</h6>
+        <h6><span style="font-weight:bold;">DataSourceDescField:</span> Define o nome da variavel que vai mostrar no DDL</h6>
         <h6><span style="font-weight:bold;">bind-DataId:</span> Definimos a variavel que vai receber o dado do ID</h6>
         <h6><span style="font-weight:bold;">bind-DataDesc:</span> Definimos a variavel que vai receber o dado da DESCRIÇÃO</h6>
         <h6><span style="font-weight:bold;">Label:</span> Texto do label</h6>
